chore(contracts-sdk): regenerate openapi fixtures and clients
