# packages/nova_sdk_py_auth/src/nova_sdk_py_auth/models/__init__.py
@@ -1,7 +1,6 @@
 """Contains all the data models used in inputs/outputs"""
 
 from .health_response import HealthResponse
-from .http_validation_error import HTTPValidationError
 from .principal import Principal
 from .token_introspect_form_request import TokenIntrospectFormRequest
 from .token_introspect_request import TokenIntrospectRequest
@@ -10,12 +9,9 @@ from .token_introspect_response_claims import TokenIntrospectResponseClaims
 from .token_verify_request import TokenVerifyRequest
 from .token_verify_response import TokenVerifyResponse
 from .token_verify_response_claims import TokenVerifyResponseClaims
-from .validation_error import ValidationError
-from .validation_error_context import ValidationErrorContext
 
 __all__ = (
     "HealthResponse",
-    "HTTPValidationError",
     "Principal",
     "TokenIntrospectFormRequest",
     "TokenIntrospectRequest",
@@ -24,6 +20,4 @@ __all__ = (
     "TokenVerifyRequest",
     "TokenVerifyResponse",
     "TokenVerifyResponseClaims",
-    "ValidationError",
-    "ValidationErrorContext",
 )
