# packages/nova_sdk_py_file/src/nova_sdk_py_file/api/transfers/abort_upload.py
@@ -7,7 +7,6 @@ from ... import errors
 from ...client import AuthenticatedClient, Client
 from ...models.abort_upload_request import AbortUploadRequest
 from ...models.abort_upload_response import AbortUploadResponse
-from ...models.http_validation_error import HTTPValidationError
 from ...types import Response
 
 
@@ -32,16 +31,11 @@ def _get_kwargs(
 
 def _parse_response(
     *, client: AuthenticatedClient | Client, response: httpx.Response
-) -> AbortUploadResponse | HTTPValidationError | None:
+) -> AbortUploadResponse | None:
     if response.status_code == 200:
         response_200 = AbortUploadResponse.from_dict(response.json())
 
         return response_200
-
-    if response.status_code == 422:
-        response_422 = HTTPValidationError.from_dict(response.json())
-
-        return response_422
 
     if client.raise_on_unexpected_status:
         raise errors.UnexpectedStatus(response.status_code, response.content)
@@ -51,7 +45,7 @@ def _parse_response(
 
 def _build_response(
     *, client: AuthenticatedClient | Client, response: httpx.Response
-) -> Response[AbortUploadResponse | HTTPValidationError]:
+) -> Response[AbortUploadResponse]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -64,7 +58,7 @@ def sync_detailed(
     *,
     client: AuthenticatedClient | Client,
     body: AbortUploadRequest,
-) -> Response[AbortUploadResponse | HTTPValidationError]:
+) -> Response[AbortUploadResponse]:
     """Abort Upload
 
      Abort multipart upload.
@@ -77,7 +71,7 @@ def sync_detailed(
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[AbortUploadResponse | HTTPValidationError]
+        Response[AbortUploadResponse]
     """
 
     kwargs = _get_kwargs(
@@ -95,7 +89,7 @@ def sync(
     *,
     client: AuthenticatedClient | Client,
     body: AbortUploadRequest,
-) -> AbortUploadResponse | HTTPValidationError | None:
+) -> AbortUploadResponse | None:
     """Abort Upload
 
      Abort multipart upload.
@@ -108,7 +102,7 @@ def sync(
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        AbortUploadResponse | HTTPValidationError
+        AbortUploadResponse
     """
 
     return sync_detailed(
@@ -121,7 +115,7 @@ async def asyncio_detailed(
     *,
     client: AuthenticatedClient | Client,
     body: AbortUploadRequest,
-) -> Response[AbortUploadResponse | HTTPValidationError]:
+) -> Response[AbortUploadResponse]:
     """Abort Upload
 
      Abort multipart upload.
@@ -134,7 +128,7 @@ async def asyncio_detailed(
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[AbortUploadResponse | HTTPValidationError]
+        Response[AbortUploadResponse]
     """
 
     kwargs = _get_kwargs(
@@ -150,7 +144,7 @@ async def asyncio(
     *,
     client: AuthenticatedClient | Client,
     body: AbortUploadRequest,
-) -> AbortUploadResponse | HTTPValidationError | None:
+) -> AbortUploadResponse | None:
     """Abort Upload
 
      Abort multipart upload.
@@ -163,7 +157,7 @@ async def asyncio(
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        AbortUploadResponse | HTTPValidationError
+        AbortUploadResponse
     """
 
     return (
